# Triple-Pendulum-LQR

./: .gitignore  LICENSE  README.md  benchmark.py  config.example.yaml  main.py  prebuild_cache.py  pyproject.toml  requirements.txt
analysis/: gain_scheduling_stability.py  region_of_attraction.py  roa_utils.py
analysis/energy/: kinetic_energy.py  potential_energy.py  total_energy.py
analysis/frequency/: closed_loop_response.py  frequency_response.py  open_loop_response.py  poles.py  sensitivity.py  stability_margins.py  step_response.py
analysis/lqr_verification/: compute_verification.py
analysis/performance/: __init__.py  rms_error.py
analysis/state/: absolute_angles.py  angle_deviations.py  derived_state.py  joint_positions.py
analysis/summary/: print_summary.py
control/: closed_loop.py  comparison.py  gain_scheduling.py  ilqr.py  lqr.py
core/: angle_utils.py  state_index.py  types.py
docs/: ANALYSIS.md  ARCHITECTURE.md  CHANGELOG.md  PERFORMANCE.md  THEORY.md  USAGE.md
dynamics/: trigonometry.py
parameters/: config.py  derived.py  equilibrium.py  packing.py  physical.py
pipeline/: defaults.py  multi_equilibrium_runner.py  runner.py  save_outputs.py
simulation/: warmup.py
tests/: conftest.py  test_core.py  test_dynamics.py  test_energy_computation.py  test_equilibria.py  test_linearization.py  test_lqr.py  test_multi_equilibrium_lqr.py  test_multi_equilibrium_plots.py  test_parameters.py  test_simulation.py  test_utils.py  test_validation_energy.py  test_warning_fixes.py
utils/: data_logger.py  logger.py  output_manager.py
(+50 files in other folders)
